--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ android {
     compileSdkVersion 28
 
     defaultConfig {
-        applicationId "jp.deadend.noname.skk"
+        applicationId "io.github.deton.androidtutcode"
         minSdkVersion 14
         targetSdkVersion 28
-        versionCode 32
-        versionName "3.4"
+        versionCode 1
+        versionName "1.0"
     }
 
     buildTypes {
