--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,15 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 31
 
     defaultConfig {
         applicationId "jp.deadend.noname.skk"
         minSdkVersion 14
-        targetSdkVersion 28
-        versionCode 32
-        versionName "3.4"
+        targetSdkVersion 30
+        versionCode 33
+        versionName "3.4.1"
     }
 
     buildTypes {
@@ -19,7 +18,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
-    lintOptions {
+    buildFeatures {
+        viewBinding true
+    }
+    lint {
         abortOnError false
     }
 }
@@ -27,8 +29,8 @@ android {
 dependencies {
     implementation files('libs/jdbm-1.0.jar')
 /*    implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01' */
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.preference:preference-ktx:1.2.0'
 }
 repositories {
     mavenCentral()
