--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
 	package="jp.deadend.noname.skk">
 	<uses-permission android:name="android.permission.RECORD_AUDIO" />
 	<application android:label="@string/ime_name"
-			android:allowBackup="true" >
+			android:allowBackup="true"
+			android:name=".SKKApplication"
+		>
 		<service android:name=".SKKService"
 			android:permission="android.permission.BIND_INPUT_METHOD" >
 			<intent-filter>
@@ -12,15 +14,9 @@
 			<meta-data android:name="android.view.im" android:resource="@xml/method" />
 		</service>
 
-		<activity android:name=".SKKPrefs"
+		<activity android:name=".SKKSettingsActivity"
 			android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
 			android:label="@string/label_pref_activity" >
-		</activity>
-		<activity android:name=".SKKDicExtractActivity"
-			android:label="@string/label_extdic_activity"
-			android:configChanges="keyboard|keyboardHidden|orientation"
-			android:screenOrientation="nosensor"
-			android:theme="@style/Theme.AppCompat.Light.Dialog" >
 		</activity>
 		<activity android:name=".SKKUserDicTool"
 			android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
