--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="jp.deadend.noname.skk">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 	<uses-permission android:name="android.permission.RECORD_AUDIO" />
+	<queries>
+		<intent>
+			<action android:name="android.speech.action.RECOGNIZE_SPEECH"/>
+		</intent>
+		<intent>
+			<action android:name="com.adamrocker.android.simeji.ACTION_INTERCEPT" />
+			<category android:name="com.adamrocker.android.simeji.REPLACE"/>
+		</intent>
+	</queries>
 	<application android:label="@string/ime_name"
 			android:allowBackup="true"
 			android:name=".SKKApplication"
 		>
 		<service android:name=".SKKService"
-			android:permission="android.permission.BIND_INPUT_METHOD" >
+			android:permission="android.permission.BIND_INPUT_METHOD"
+			android:exported="false" >
 			<intent-filter>
 				<action android:name="android.view.InputMethod" />
 			</intent-filter>
@@ -25,9 +34,6 @@
 		<activity android:name=".SKKDicManager"
 				  android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
 				  android:label="@string/label_dicmanager_activity" >
-		</activity>
-		<activity android:name=".FileChooser"
-			android:theme="@style/Theme.AppCompat.Light.DarkActionBar" >
 		</activity>
 		<activity android:name=".SKKMushroom"
 			android:label="@string/label_mushroom"
