--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "jp.deadend.noname.skk"
-        minSdkVersion 14
-        targetSdkVersion 30
-        versionCode 33
-        versionName "3.4.1"
+        minSdkVersion 21
+        targetSdkVersion 33
+        versionCode 35
+        versionName "3.5.1"
     }
 
     buildTypes {
@@ -24,12 +24,13 @@ android {
     lint {
         abortOnError false
     }
+    namespace 'jp.deadend.noname.skk'
 }
 
 dependencies {
     implementation files('libs/jdbm-1.0.jar')
 /*    implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01' */
-    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.preference:preference-ktx:1.2.0'
 }
 repositories {
